jenkins/create-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
