jenkins/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
      app.kubernetes.io/instance: jenkins
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
        app.kubernetes.io/instance: jenkins
    spec:
      serviceAccountName: jenkins-controller
      securityContext:
        fsGroup: 1000
          #initContainers:
          #  - name: init-plugins
          #    image: jenkins/jenkins:lts
          #    command:
          #      - /bin/sh
          #      - -c
          #      - |
          #        jenkins-plugin-cli --plugins \
          #          kubernetes:4296.v20a_20e79e256f \
          #          kubernetes-cli:1.12.0 \
          #          docker-workflow:580.vc0c340571a_9a_ \
          #          docker-plugin:1.7.0 \
          #          git:5.7.0 \
          #          forgejo:2.4.1 \
          #          ldap:725.vcb_cb_e615f78d \
          #          configuration-as-code:1909.vb_b_f59b_78746a_ \
          #          generic-webhook-trigger:2.3.1 \
          #          pipeline-stage-view:2.34 \
          #          workflow-aggregator:600.vb_57cdd4643b_2 \
          #          build-timeout:1.33 \
          #          timestamper:1.28 \
          #          ws-cleanup:0.48 \
          #          credentials:1405.vb_cda_74a_f7952 \
          #          credentials-binding:687.v619cb_15e923f
          #    volumeMounts:
          #      - name: jenkins-home
          #        mountPath: /var/jenkins_home
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: agent
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: jcasc-config
              mountPath: /var/jenkins_home/casc
              readOnly: true
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
        - name: jcasc-config
          configMap:
            name: jenkins-jcasc-config
